feat: modify ios cache
